Fix bug for vertical alignment of caretakers

--- a/public/css/patients/careteam.less
+++ b/public/css/patients/careteam.less
@@ -112,6 +112,11 @@
     .clearfix();
   }
 
+  .col-lg-4:nth-child(3n+1) {
+    clear: both;
+
+  }
+
   h3 {
     font-size: 12px;
     color: @blue;
